remove issues sonarcloud